# mapdrums

./: README.md  SampleInput.csv  gen-drms.py  setup.cfg
samples/: HwPrcDrumMaps.csv
src/mapdrums/: __main__.py  main.py
src/mapdrums/data/: template.drm
