# SPDX-FileCopyrightText: 2022 Barndollar Music, Ltd.
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = mapdrums
# NOTE: Also update main.py when updating version.
version = 0.9.0
author = Barndollar Music, Ltd.
author_email = eric@barndollarmusic.com
description = Generate drum maps from input CSV file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/barndollarmusic/mapdrums
project_urls =
    Bug Tracker = https://github.com/barndollarmusic/mapdrums/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Jinja2 >=3.1.0

[options.package_data]
* = data/*.drm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mapdrums = mapdrums.main:cli
